2014-11-12  Per Bothner  <per@bothner.com>

	* standard/module_name.java (scanForm): Never declare a variable
	named with the module name - the latter is in a different namespace.
	* lang/Translator.java (checkDefaultBinding): Also check in
	ModuleManager for class being currently compiled.

2014-11-02  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java (checkSrfi): Allow r7rs
	syntax (import (srfi NNN [NAME])) without colon before NNN.

2014-10-29  Per Bothner  <per@bothner.com>

	* repl.java (noConsole): Move field to InPort.java.
	(shouldUseGuiConsole): Remove method - use InPort.haveConsole instead.

2014-10-27  Per Bothner  <per@bothner.com>

	* standard/load.java: Fix super-class to be Procedure1or2.
	* Shell.java (runFile): Set and restore current environment.

2014-10-24  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Fix typo 'make-promise!' ->
	'make-promise'.

2014-10-22  Per Bothner  <per@bothner.com>

	* standard/IfFeature.java (coreFeatures): Rename 'macos to 'macosx.
	Add some bsd support.  Don't also define i386 if x86_64.

	* standard/Scheme.java (initScheme): Added bindings for 'else 'unquote
	'unquote-splicing '... '=> '_.

2014-10-17  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Added promise? and environment.
	Updated some other bindings.

2014-10-14  Per Bothner  <per@bothner.com>

	* standard/IfFeature.java (coreFeatures): Add a bunch of features,
	oncluding r7rs and system properties.

	* standard/Scheme.java (initScheme): Add bindings for 'make-promise'
	and 'delay-force' (as a synonym for 'lazy').

	* standard/IfFeature.java: Now extends syntax.  Re-write to
	handle cond-expand here (rather than in Scheme code).
	Now also implements the library clause.
	* standard/Scheme.java (initScheme): Update 'cond-expand' binding.
	* standard/define_library.java: Support cond-expand clause.
	* standard/ImportFromLibrary.java (checkSrfi): New method.
	(scanImportset): Use it.